# Project-Management-App

./: .dockerignore  .eslint.config.js  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  Dockerfile_dev  Dockerfile_prod  README.md  env_file  eslint.config.js  index.html  index.js  main.tf  nginx.conf  nginx_dev.conf  package-lock.json  package.json  pm_nomad_dev.tpl  pm_nomad_prod.tpl  pyproject.toml  routes.js  tsconfig.json  validations.js
.ci/: .pre-commit-config.yaml
.github/workflows/: deploy.yaml  destroy.yaml  pre-commit-config.yaml
config/: db.js
controllers/: BoardController.js  ColumnController.js  TaskController.js  UserController.js
models/: Board.js  Column.js  Task.js  User.js
nginx/: nginx.conf  pmapp.conf
public/locales/en/: translation.json
public/locales/ru/: translation.json
src/: axios.js  axios.ts  i18n.js  index.scss  main.jsx  main.tsx
src/components/App/: App.jsx  App.scss  App.tsx
src/components/Auth/: Auth.tsx  AuthForm.scss  AuthForm.tsx  Login.tsx  Signup.tsx
src/components/AuthForm/: AuthForm.scss  AuthForm.tsx
src/components/Board/: Board.jsx  Board.scss  Board.tsx  Skeleton.jsx  Skeleton.tsx
src/components/Boards/: Boards.jsx  (+1 more)
src/redux/: hooks.ts  store.js  store.ts
src/sass/: _buttons.scss  _wrappers.scss
src/utils/: BoardsStateContextProvider.js  ModalContext.tsx  ProtectedRoute.tsx  authUtils.ts  boardsService.ts  columnsService.ts  constants.js  constants.ts  formValidityLogic.js  handleConfirm.ts  taskService.ts  types.ts  useBoardsState.js  useModalWindow.ts  useScreenType.js
utils/: checkAuth.js
(+72 files in other folders)
